refactor(validation): unify field validation across DTOs, domain, and persistence layers